organization-infra/src/main/k8s/ngnix-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ../k8s
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: ngnix-server
  name: ngnix-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ngnix-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ../k8s
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/organization-network: "true"
        io.kompose.service: ngnix-server
    spec:
      containers:
        - image: nginx:1.13
          name: ngnix-server
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: ngnix-server-claim0
      restartPolicy: Always
      volumes:
        - name: ngnix-server-claim0
          persistentVolumeClaim:
            claimName: ngnix-server-claim0
status: {}
