organization-infra/src/main/k8s/organization-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: organization-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/organization-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/organization-network: "true"
